# FredC_MVP

./: .gitignore  LICENSE  README.md  roadmap.md
.github/workflows/: webapp.yml
webapp/: dev_run.sh  main.py  pyproject.toml
webapp/model/: user.py
webapp/store/: db.py  user.py
webapp/view/: auth.py  notfound.py
